testing mobile version

--- a/css/main.css
+++ b/css/main.css
@@ -350,13 +350,23 @@ footer .copy {
     top: 600px; }
   .products {
     padding: 40px 0; }
-  .products .heading {
-    font-size: 35px; }
-  .products .content-card {
-    margin-top: 0px;
-    margin-left: 0px; }
-  .products .product1, .products .product2 {
-    margin-top: 85px; }
+    .products .heading {
+      font-size: 35px; }
+    .products .content-card {
+      padding: 0;
+      margin-top: 0px;
+      margin-left: 0px; }
+      .products .content-card ul {
+        line-height: 25px; }
+      .products .content-card .col-md-3 {
+        text-align: center; }
+        .products .content-card .col-md-3 img {
+          display: block;
+          margin: 0 auto; }
+    .products .products-list img {
+      padding-left: 50px; }
+    .products .product1, .products .product2, .products .product3 {
+      margin-top: 85px; }
   .advantages {
     text-align: center;
     height: 550px; }
@@ -379,12 +389,42 @@ footer .copy {
     padding: 0;
     margin-top: 50px;
     margin-left: 0; }
+  .support {
+    padding-top: 30px;
+    height: 460px; }
+    .support h1 {
+      font-size: 24px; }
+    .support p {
+      padding-top: 10px;
+      padding-bottom: 20px; }
   .bonus-services {
     height: auto; }
-  .bonus-services img {
-    margin-top: 0px;
-    max-width: 410px; }
-  .bonus-services .col-md-6 {
-    padding: 0; }
-  footer .usefull {
-    text-align: center; } }
+    .bonus-services img {
+      margin-top: 0px; }
+    .bonus-services .col-md-6 {
+      padding: 0; }
+      .bonus-services .col-md-6 h1 {
+        text-align: center;
+        font-size: 40px; }
+      .bonus-services .col-md-6 p {
+        padding-left: 40px;
+        padding-top: 15px; }
+      .bonus-services .col-md-6 .bonus-services-list {
+        padding-left: 55px;
+        padding-bottom: 15px; }
+      .bonus-services .col-md-6 button {
+        display: block;
+        margin: 0 auto;
+        margin-bottom: 20px; }
+  footer {
+    padding-top: 40px;
+    height: 350px; }
+    footer .col-md-3 {
+      padding-bottom: 20px; }
+      footer .col-md-3 img {
+        display: block;
+        margin: 0 auto; }
+    footer .usefull {
+      text-align: center; }
+    footer hr {
+      margin-top: 0; } }
