--- a/css/main.css
+++ b/css/main.css
@@ -339,9 +339,9 @@ footer .copy {
     height: 625px;
     padding-top: 50px; }
   .hero h1 {
-    font-size: 40px; }
+    font-size: 36px; }
   .hero p {
-    font-size: 14px; }
+    font-size: 17px; }
   .hero .mdl-button--red {
     width: 240px;
     height: 40px;
@@ -363,8 +363,12 @@ footer .copy {
         .products .content-card .col-md-3 img {
           display: block;
           margin: 0 auto; }
-    .products .products-list img {
-      padding-left: 50px; }
+    .products .products-list {
+      padding-top: 0; }
+      .products .products-list img {
+        padding-left: 50px; }
+      .products .products-list .product-info {
+        margin-top: 40px; }
     .products .product1, .products .product2, .products .product3 {
       margin-top: 85px; }
   .advantages {
@@ -372,10 +376,10 @@ footer .copy {
     height: 550px; }
   .advantages .heading {
     padding-top: 20px;
-    font-size: 40px; }
+    font-size: 26px; }
   .advantages-list {
     padding-bottom: 100px;
-    font-size: 22px; }
+    font-size: 19px; }
   .spectrum {
     padding-top: 15px;
     height: 620px; }
@@ -383,6 +387,8 @@ footer .copy {
     font-size: 40px; }
   .spectrum .row {
     padding-left: 60px; }
+  .functions-content {
+    padding-top: 0px !important; }
   .collapse-card-text {
     padding-left: 30px; }
   .content-card {
