--- a/scss/_sm_xs_devices.scss
+++ b/scss/_sm_xs_devices.scss
@@ -6,11 +6,11 @@
     }
 
     .hero h1 {
-        font-size: 40px;
+        font-size: 36px;
     }
 
     .hero p {
-        font-size: 14px;
+        font-size: 17px;
     }
 
     .hero .mdl-button--red {
@@ -50,8 +50,14 @@
         }
         
         .products-list {
+            padding-top: 0;
+            
             img {
                 padding-left: 50px;
+            }
+            
+            .product-info {
+                margin-top: 40px;
             }
         }
         
@@ -67,12 +73,12 @@
 
     .advantages .heading {
         padding-top: 20px;
-        font-size: 40px;
+        font-size: 26px;
     }
 
     .advantages-list {
         padding-bottom: 100px;
-        font-size: 22px;
+        font-size: 19px;
     }
 
     .spectrum {
@@ -86,6 +92,10 @@
 
     .spectrum .row {
         padding-left: 60px;
+    }
+    
+    .functions-content {
+        padding-top: 0px !important;
     }
 
     .collapse-card-text {
