addded circles in hero section

--- a/scss/_sm_xs_devices.scss
+++ b/scss/_sm_xs_devices.scss
@@ -18,6 +18,10 @@
         height: 40px;
         font-size: 18px;
     }
+    
+    .hero .circles {
+        margin-top: 25px;
+    }
 
     .hero .button-scroll {
         top: 600px;
