--- a/css/main.css
+++ b/css/main.css
@@ -88,6 +88,38 @@ nav {
     padding-left: 56px;
     padding-right: 56px;
     height: 40px; }
+  .hero .circles {
+    max-width: 600px;
+    display: block;
+    margin: 0 auto;
+    margin-top: 100px; }
+    .hero .circles .circle {
+      display: block;
+      margin: 0 auto;
+      font-size: 16px;
+      height: 100px;
+      width: 100px;
+      text-align: center;
+      line-height: 0px;
+      border-radius: 50%;
+      border: 2px solid rgba(255, 255, 255, 0.3); }
+      .hero .circles .circle .text {
+        line-height: 70px; }
+    .hero .circles .c1:before {
+      font-family: 'Material Icons';
+      content: "free_breakfast";
+      font-size: 30px;
+      line-height: 0; }
+    .hero .circles .c2:before {
+      font-family: 'Material Icons';
+      content: "remove_red_eye";
+      font-size: 30px;
+      line-height: 0; }
+    .hero .circles .c3:before {
+      font-family: 'Material Icons';
+      content: "verified_user";
+      font-size: 30px;
+      line-height: 0; }
   .hero .button-scroll {
     width: 50px;
     height: 50px;
@@ -346,6 +378,8 @@ footer .copy {
     width: 240px;
     height: 40px;
     font-size: 18px; }
+  .hero .circles {
+    margin-top: 25px; }
   .hero .button-scroll {
     top: 600px; }
   .products {
