--- a/scss/site/_header.scss
+++ b/scss/site/_header.scss
@@ -63,6 +63,51 @@ nav {
         height: 40px;
     }
     
+    .circles {
+        max-width: 600px;
+        display: block;
+        margin: 0 auto;
+        margin-top: 100px;
+        
+        .circle {
+            display: block;
+            
+            margin: 0 auto; 
+            font-size: 16px;
+            height: 100px;
+            width: 100px;
+            text-align: center;
+            line-height: 0px;
+            border-radius: 50%;
+            border: 2px solid rgba(255,255,255,0.30);
+
+            .text {
+                line-height: 70px;
+            }
+        }
+    
+        .c1:before {
+            font-family: 'Material Icons';
+            content: "free_breakfast";
+            font-size: 30px;
+            line-height: 0;
+        }
+        
+        .c2:before {
+            font-family: 'Material Icons';
+            content: "remove_red_eye";
+            font-size: 30px;
+            line-height: 0;
+        }
+        
+        .c3:before {
+            font-family: 'Material Icons';
+            content: "verified_user";
+            font-size: 30px;
+            line-height: 0;
+        }
+    }
+    
     .button-scroll {
         width: 50px;
         height: 50px;
