--- a/css/main.css
+++ b/css/main.css
@@ -231,6 +231,80 @@ nav {
   .spectrum h1 {
     text-align: center;
     font-weight: 500; }
+  .spectrum .circles {
+    padding-top: 90px; }
+    .spectrum .circles .main-circle {
+      position: relative;
+      display: block;
+      margin: 0 auto;
+      padding-top: 35px;
+      border-radius: 50%;
+      text-align: center;
+      word-break: break-all;
+      height: 215px;
+      width: 215px;
+      color: #fff;
+      background: #009688; }
+      .spectrum .circles .main-circle .heading {
+        line-height: 80px; }
+    .spectrum .circles .circle {
+      justify-content: center;
+      align-items: center;
+      border-radius: 100%;
+      text-align: center;
+      font-size: 15px;
+      padding: 15px;
+      display: flex;
+      height: 75px;
+      width: 75px;
+      color: rgba(0, 150, 136, 0.5);
+      border: 1px solid rgba(0, 150, 136, 0.5); }
+    .spectrum .circles .circle:hover {
+      color: #009688;
+      border: 1px solid #009688; }
+    .spectrum .circles .active {
+      color: #009688;
+      border: 1px solid #009688; }
+    .spectrum .circles .c1 {
+      position: absolute;
+      top: 10px;
+      left: 250px; }
+    .spectrum .circles .c1:before {
+      font-family: 'Material Icons';
+      content: "store_mall_directory";
+      font-size: 36px; }
+    .spectrum .circles .c2 {
+      position: absolute;
+      top: 120px;
+      left: 100px; }
+    .spectrum .circles .c2:before {
+      font-family: 'Material Icons';
+      content: "place";
+      font-size: 36px; }
+    .spectrum .circles .c3 {
+      position: absolute;
+      top: 275px;
+      left: 140px; }
+    .spectrum .circles .c3:before {
+      font-family: 'Material Icons';
+      content: "school";
+      font-size: 36px; }
+    .spectrum .circles .c4 {
+      position: absolute;
+      top: 120px;
+      left: 395px; }
+    .spectrum .circles .c4:before {
+      font-family: 'Material Icons';
+      content: "local_library";
+      font-size: 36px; }
+    .spectrum .circles .c5 {
+      position: absolute;
+      top: 275px;
+      left: 355px; }
+    .spectrum .circles .c5:before {
+      font-family: 'Material Icons';
+      content: "local_hospital";
+      font-size: 36px; }
   .spectrum .heading {
     font-size: 22px;
     font-weight: 600; }
@@ -364,7 +438,7 @@ footer .copy {
       padding-right: 35px;
       margin-bottom: 65px; }
   .bonus-services img {
-    margin-top: 112px; }
+    margin-top: 132px; }
 
 @media (max-width: 768px) {
   .hero {
@@ -417,10 +491,12 @@ footer .copy {
   .spectrum {
     padding-top: 15px;
     height: 620px; }
-  .spectrum h1 {
-    font-size: 40px; }
-  .spectrum .row {
-    padding-left: 60px; }
+    .spectrum .circles {
+      display: none; }
+    .spectrum h1 {
+      font-size: 40px; }
+    .spectrum .row {
+      padding-left: 60px; }
   .functions-content {
     padding-top: 0px !important; }
   .collapse-card-text {
