--- a/css/main.css
+++ b/css/main.css
@@ -55,6 +55,9 @@ nav {
     text-decoration: none !important; }
   nav .navbar-nav .mdl-button--red {
     margin-bottom: 5px; }
+  nav .active {
+    color: #455a64 !important;
+    border-bottom: 3px solid #f44336; }
   nav .nav-item {
     margin-top: 10px;
     margin-right: 50px; }
@@ -62,9 +65,6 @@ nav {
       color: #455a64 !important;
       padding-bottom: 15px;
       font-size: 18px; }
-      nav .nav-item .nav-link .active {
-        color: #455a64 !important;
-        border-bottom: 3px solid #f44336; }
 
 .hero {
   height: 900px;
