--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -7,9 +7,15 @@ $white: #fff;
 $red: #f44336;
 $text-field: #455a64;
 $text-field-light: #90a4ae;
+$grey: #949493;
 $yellow: #ffc108;
 $turquoise: #009688;
+$turquoise-half-transparent: rgba(0, 150, 136, 0.5);
 $light-grey: #f8f8f8;
 $green-product: #4caf50;
 $blue-product : #3f51b5;
 $purple-product: #4a148c;
+
+$heading-font: "Roboto-Bold";
+$text-font: "Roboto-Regular";
+$material-font : "Material Icons";
