--- a/scss/site/_bonus_services.scss
+++ b/scss/site/_bonus_services.scss
@@ -1,31 +1,33 @@
 .bonus-services {
-    height: 500px;
-    padding-top: 35px;
-    
+    margin-top: 140px;
+
     h1 {
-        color: #455a64;
-        font-weight: 600;
+        margin-top: 0px;
+        color: $text-field;
+        font-family: $heading-font;
     }
     
     p {
-        padding-top: 30px;
-        color: #455a64;
-        font-weight: 600;
+        padding-top: 50px;
+        color: $text-field;
+        font-family: $heading-font;
         font-size: 18px;
     }
     
     .bonus-services-list {
-        color: #455a64;
+        font-family: $text-font;
+        color: $text-field-light;
         padding-left: 15px;
-        padding-bottom: 40px;
-        
-        .contact-us-button {
-            font-size: 14px;
-            color: #455a64;
-            padding-left: 35px;
-            padding-right: 35px;
-            margin-bottom: 65px;
-        }
+        padding-bottom: 50px;
+    }
+
+    .contact-us-button {
+        font-size: 14px;
+        color: $text-field;
+        height: 45px;
+        width: 237px;
+        margin-bottom: 50px;
+        font-family: $heading-font;
     }
     
     img {
