--- a/scss/site/_body.scss
+++ b/scss/site/_body.scss
@@ -1,19 +1,15 @@
-body {
-    font-family: 'Roboto-Bold';
-}
-
 .green {
-    color: #4caf50;
+    color: $green-product;
 }
 
 .blue {
-    color: #3f51b5;
+    color: $blue-product;
 }
 
 .purple {
-    color: #4a148c;
+    color: $purple-product;
 }
 
 .red {
-    color: #f44336;
+    color: $red;
 }
