--- a/scss/site/_functions.scss
+++ b/scss/site/_functions.scss
@@ -1,58 +1,65 @@
 .functions {
-    padding-bottom: 120px;
-    
+
     h1 {
         font-size: 40px;
-        color: #f44336;
+        color: $red;
         text-align: center;
-        font-weight: 600;
+        font-family: $heading-font;
     }
     
     .functions-content {
-        padding-top: 60px;
-    }
+        padding-top: 50px;
+
     
-    .collapse-card {
-        -webkit-box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.25);
-        -moz-box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.25);
-        box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.25);
-        color: #455a64;
-        margin-bottom: 10px;
-        
-        .heading {
-            margin-bottom: 0;
-            font-size: 18px;
-            font-weight: 600;
-        }
-        
-        .circle-check {
-            margin-top: 30px;
-        }
-        
-        .circle-check:before {
-            color: #f44336;
-        }
-        
-        .collapse-button {
-            color: #f44336;
-            margin-top: 25px;
-            font-size: 36px;
-        }
-        
-        .collapse-card-text {
-            padding-left: 50px;
-            padding-top: 20px;
-        }
-        
-        images {
-            padding-left: 20px;
+        .collapse-card {
+            -webkit-box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.25);
+            -moz-box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.25);
+            box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.25);
+            margin-bottom: 10px;
             
-            img {
-                height: 100px;
-                margin-right: 20px;
-                -webkit-box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.25);
-                -moz-box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.25);
-                box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.25);
+            .heading {
+                color: $text-field;
+                margin-bottom: 0;
+                font-size: 18px;
+                font-family: $heading-font;
+            }
+            
+            .circle-check {
+                margin-top: 25px;
+            }
+            
+            .circle-check:before {
+                color: $red;
+            }
+            
+            .collapse-button {
+                color: $red;
+                margin-top: 20px;
+                font-size: 36px;
+            }
+            
+            .collapse-card-text {
+                font-family: $text-font;
+                color: $text-field-light;
+                padding-left: 50px;
+                padding-top: 5px;
+            }
+            
+            .preparing {
+                color: $red;
+                font-family: $heading-font;
+            }
+            
+            .images {
+                padding-left: 20px;
+                
+                img {
+                    height: 100px;
+                    margin-right: 20px;
+                    -webkit-box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.25);
+                    -moz-box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.25);
+                    box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.25);
+                }
             }
         }
     }
@@ -60,10 +67,12 @@
     .mdl-button--red {
         width: 300px;
         height: 55px;
+        font-family: $heading-font;
         display: block;
         margin: 0 auto;
         font-size: 22px;
-        margin-top: 40px;
+        margin-top: 50px;
+        margin-bottom: 140px;
     }
 
 }
