--- a/scss/site/_header.scss
+++ b/scss/site/_header.scss
@@ -1,4 +1,5 @@
 nav {
+    height: 70px;
     padding-bottom: 0px !important;
     padding-top: 0px !important;
     -webkit-box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.25);
@@ -14,68 +15,76 @@ nav {
     }
     
     .navbar-nav .mdl-button--red {
-        margin-bottom: 5px;
+        margin-bottom: 20px;
     }
     
     .active {
-        color: #455a64 !important;
-        border-bottom: 3px solid #f44336;
+        border-bottom: 3px solid $red;
     }
     
     .nav-item {
-        margin-top: 10px;
+        margin-top: 20px;
         margin-right: 50px;
         
         .nav-link {
-            color: #455a64 !important;
+            color: $text-field !important;
             padding-bottom: 15px;
             font-size: 18px;
+            font-family: $text-font;
         }
     }
 }
 
 .hero {
-    height: 900px;
+    height: 980px;
     background: url('../assets/img/hero.jpg');
     background-size: cover;
     text-align: center;
     color:white;
-    padding-top: 200px;
+    
+    h1 {
+        padding-top: 230px;
+        margin-bottom: 55px;
+        font-family: $heading-font;
+    }
     
     p {
         font-size: 18px;
-        margin-bottom: 30px;
+        margin-bottom: 55px;
+        font-family: $text-font;
     }
     
     .mdl-button--red {
+        font-family: $heading-font;
         width: 300px;
         height: 55px;
         font-size: 20px;
+        margin-bottom: 55px;
     }
     
     .mdl-button--transparent {
-        margin-top: 40px;
-        color: white;
+        color: $white;
         background-color: transparent;
-        border: 1px solid white;
+        border: 1px solid $white;
         padding-left: 56px;
         padding-right: 56px;
         height: 40px;
+        font-family: $heading-font;
+        margin-bottom: 110px;
     }
     
     .circles {
         max-width: 600px;
         display: block;
         margin: 0 auto;
-        margin-top: 100px;
         
         .circle {
             display: block;
             
             margin: 0 auto; 
             font-size: 16px;
-            height: 100px;
-            width: 100px;
+            height: 105px;
+            width: 105px;
             text-align: center;
             line-height: 0px;
             border-radius: 50%;
@@ -87,21 +96,21 @@ nav {
         }
     
         .c1:before {
-            font-family: 'Material Icons';
+            font-family: $material-font;
             content: "free_breakfast";
             font-size: 30px;
             line-height: 0;
         }
         
         .c2:before {
-            font-family: 'Material Icons';
+            font-family: $material-font;
             content: "remove_red_eye";
             font-size: 30px;
             line-height: 0;
         }
         
         .c3:before {
-            font-family: 'Material Icons';
+            font-family: $material-font;
             content: "verified_user";
             font-size: 30px;
             line-height: 0;
@@ -109,18 +118,18 @@ nav {
     }
     
     .button-scroll {
-        width: 50px;
-        height: 50px;
+        width: 60px;
+        height: 60px;
         left: calc(50% -  25px);
         position: absolute;
         z-index: 999;
-        top: 870px;
+        top: 970px;
         background: $white;
         color: $red;
     } 
 
     .button-scroll:hover, .button-scroll:focus, .button-scroll:active {
-        background-color: #f44336 !important;
+        background-color: $red !important;
         color: $white;
     }
 }
