--- a/scss/site/_support.scss
+++ b/scss/site/_support.scss
@@ -1,32 +1,35 @@
 .support {
-    padding-top: 150px;
-    height: 730px;
     background: url(../assets/img/paralax_red.jpg);
     background-size: cover;
     background-attachment: fixed;
     
     h1 {
+        padding-top: 140px;
         text-align: center;
-        color: #fff;
-        font-weight: 500;
+        color: $white;
+        font-family: $text-font;
     }
     
     p {
-        padding-top: 55px;
+        padding-top: 50px;
         text-align: center;
         font-size: 18px;
-        color: #fff;
-        padding-bottom: 55px;
+        color: $white;
+        padding-bottom: 50px;
+        font-family: $heading-font;
     }
     
     .contact-button {
-        color: white;
+        color: $white;
         background-color: transparent;
-        border: 1px solid white;
+        border: 1px solid $white;
         padding-left: 56px;
         padding-right: 56px;
         height: 40px;
         display: block;
         margin: 0 auto;
+        font-family: $text-font;
     }
+    
+    padding-bottom: 140px;
 }
