added gdrp page

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -6,6 +6,7 @@
 @import "buttons";
 
 @import "site/body";
+@import "site/nav";
 @import "site/header";
 @import "site/products";
 @import "site/advantages";
