--- a/css/main.css
+++ b/css/main.css
@@ -95,6 +95,43 @@ nav .nav-item .nav-link {
   font-family: "Roboto-Regular";
 }
 
+nav {
+  height: 70px;
+  padding-bottom: 0px !important;
+  padding-top: 0px !important;
+  -webkit-box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.25);
+  -moz-box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.25);
+  box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.25);
+}
+
+nav .navbar-brand {
+  margin-right: 100px;
+}
+
+nav a {
+  text-decoration: none !important;
+}
+
+nav .navbar-nav .mdl-button--red {
+  margin-bottom: 20px;
+}
+
+nav .active {
+  border-bottom: 3px solid #f44336;
+}
+
+nav .nav-item {
+  margin-top: 20px;
+  margin-right: 50px;
+}
+
+nav .nav-item .nav-link {
+  color: #455a64 !important;
+  padding-bottom: 15px;
+  font-size: 18px;
+  font-family: "Roboto-Regular";
+}
+
 .hero {
   height: 980px;
   background: url("../assets/img/hero.jpg");
