--- a/scss/aboutus/_aboutus.scss
+++ b/scss/aboutus/_aboutus.scss
@@ -1,4 +1,4 @@
-.gdrp {
+.aboutus {
     padding-top: 150px;
 
     h1 {
@@ -72,13 +72,13 @@
 }
 
 @media (min-width: 763px) and (max-width: 992px) {
-    .gdrp .note button {
+    .aboutus .note button {
         width: 200px !important;
     }
 }
 
 @media (max-width: 768px) {
-    .gdrp {
+    .aboutus {
         padding-top: 60px;
 
         h1 {
