--- a/scss/gdpr.scss
+++ b/scss/gdpr.scss
@@ -6,7 +6,7 @@
 @import "buttons";
 
 @import "site/nav";
-@import "gdrp/gdrp";
+@import "gdpr/gdpr";
 @import "site/footer";
 
 @import "sm_xs_devices";
