fix image margine on 1024 res

--- a/css/aboutus.css
+++ b/css/aboutus.css
@@ -447,5 +447,8 @@ footer .copy {
   .spectrum .row .circles .c5 {
     left: 305px;
   }
+  .bonus-services img {
+    margin-top: 168px;
+  }
 }
 /*# sourceMappingURL=aboutus.css.map */
