--- a/css/main.css
+++ b/css/main.css
@@ -935,5 +935,8 @@ footer .copy {
   .spectrum .row .circles .c5 {
     left: 305px;
   }
+  .bonus-services img {
+    margin-top: 168px;
+  }
 }
 /*# sourceMappingURL=main.css.map */
