--- a/scss/_md_devices.scss
+++ b/scss/_md_devices.scss
@@ -101,4 +101,8 @@
     .spectrum .row .circles .c5 {
         left: 305px;
     }
+
+    .bonus-services img {
+        margin-top: 168px;
+    }
 }
