--- a/css/gdpr.css
+++ b/css/gdpr.css
@@ -454,5 +454,8 @@ footer .copy {
   .spectrum .row .circles .c5 {
     left: 305px;
   }
+  .bonus-services img {
+    margin-top: 168px;
+  }
 }
 /*# sourceMappingURL=gdpr.css.map */
